# bloghead-qt

./: .gitattributes  .gitignore  Makefile  README.md  app.py  empty.ui  ipc.py  main.ui  mockup.py  mockup.ui  pyproject.toml  use-ui.py
scripts/: seed.py
scripts/seed-data/: 01.hello.seed  02.about.seed  03.2nd.seed
src/: bloghead.py  djot.server.js
src/bloghead/: __init__.py  djot_ipc.py  main.py
src/bloghead/persistence/: __init__.py  common.py  schema.sql
src/js/: djot-server.js
