[tool.poetry]
name = "bloghead"
version = "0.1.0"
description = ""
authors = ["Nhân <hi@imnhan.com>"]
license = "GPL-3.0-only"
readme = "README.md"
include = ["src/bloghead/*.js"]

[tool.poetry.scripts]
bloghead = "bloghead:start"

[tool.poetry.dependencies]
# Can't do python ^3.10 because pyside2 doesn't support 3.11 for some reason.
# Maybe someday kde will fully support qt6 and we'll be able to use pyside6.
python = "~3.10"
pyside2 = "^5.15"
peewee = "^3.16"


[tool.poetry.group.dev.dependencies]
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
